--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,7 +15,7 @@
           <ul>
 		            <li><a href="index.html">ホーム</a></li>
 		            <li><a href="Items">商品一覧</a></li>
-		            <li><a href="Cart">カート</a></li>
+		            <li><a href="Cart">カートto</a></li>
 		            <li><a href="History">購入履歴</a></li>
 		            <li><a href="Login">ログイン</a></li>
 		            <li><a href="Regist">新規会員登録</a></li>
