--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="wrapper">
-	<!-- ヘッダー -->
+	<!-- ヘッダーC -->
 	<header class="header">
 		<h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="KUJIRA Cafe"></a></h1>
 		<nav class="nav">
