--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <!-- ヘッダーVV -->
+      <!-- ヘッダーE -->
       <header class="header">
         <h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="KUJIRA Cafe"></a></h1>
         <nav class="nav">
@@ -23,7 +23,7 @@
           </ul>
         </nav>
       </header>
-      <!-- ヘッダー ここまで -->
+      <!-- ヘッダー ここまでE -->
       <!-- メイン -->
       <div class="keyvisual"> <img src="images/keyvisual.jpg" alt=""> </div>
       <main>
