--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <!-- ヘッダーE -->
+      <!-- ヘッダー--s- -->
       <header class="header">
         <h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="KUJIRA Cafe"></a></h1>
         <nav class="nav">
@@ -32,7 +32,7 @@
         <p class="news-item">3月20日（水）取り扱い商品にキャビネット中を追加しました。価格は、40,000円です。</p>
         <p class="news-item">2月12日（火）取り扱い商品にキャビネット小を追加しました。価格は、30,000円です。</p>
       </main>
-      <!-- メイン ここまで -->
+      <!-- メイン ここまでs -->
       <!-- フッター -->
       <footer class="footer">
         <p>&copy;Copyright Workbook Shop. All rights reserved.</p>
