--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -23,7 +23,7 @@
 			</ul>
 		</nav>
 	</header>
-	<!-- ヘッダー ここまで -->
+	<!-- ヘッダー ここまでs -->
 	<!-- メイン -->
 	<main>
 		<h2>事務用品、オフィス用品の通販サイト：WORKBOOK SHOPです。</h2>
@@ -71,7 +71,7 @@
 		</tr>
 		</table>
 	</main>
-	<!-- メイン ここまで -->
+	<!-- メイン ここまでoo -->
 	<!-- フッター -->
 	<footer class="footer">
         <p>&copy;Copyright Workbook Shop. All rights reserved.</p>
